--- a/Src/CleanArchitecture.Presentation/appsettings.json
+++ b/Src/CleanArchitecture.Presentation/appsettings.json
@@ -9,7 +9,7 @@
   "DatabaseSettings": {
     "UseSqlServer": true,
     "ConnectionStrings": {
-        "SqlServer": "Data Source=TRI02L-PW03VMZD\\SQLEXPRESS;Initial Catalog=ComplexDB;User Id=pocuser;Password=StrongPassword123!;Encrypt=False;Connect Timeout=5;",
+        "SqlServer": "Data Source=TRI02L-PW03VMZD\\MSSQLSERVER1;Initial Catalog=ComplexDB;User Id=sa;Password=Welcome@123;Encrypt=False;Connect Timeout=5;",
         "PostgreSQL": "Host=localhost;Database=ComplexDB;Username=postgres;Password=password"
     },
     "AutoCreateDatabase": true,
